Revert "Bugfix: broken style for button (#601)"
This reverts commit 86809c428e2dea7a2dc3f6fecb025def449d7483.

--- a/catalog/ui/src/app/Catalog/catalog-item-details.css
+++ b/catalog/ui/src/app/Catalog/catalog-item-details.css
@@ -69,10 +69,6 @@
   width: 90px;
   margin-right: var(--pf-global--spacer--md) !important;
 }
-.catalog-item-details__main-btn--expanded {
-  width: auto;
-  margin-right: var(--pf-global--spacer--md) !important;
-}
 
 .catalog-item-details__header-text {
   display: flex;
